# Race

./: .gitignore  Gemfile  LICENSE  README.md  _config.yml  agent.py  automatic_control_GRAIC.py  index.html  raceDoc22.md  scenario.py  shanghai_intl_circuit  trajectory_visualization.py  typography.md  wrapper.py
EC/: agent.py  automatic_control_GRAIC.py  t3_collision.txt  wrapper.py
_about/: 00people-2021.md  00people-2022.md  00people.md  01participants-2022.md  01participants.md  about.md  people.md
_archive/: archive.md
_data/: navigation.yml  network.yml  services.yml  socialmedia.yml
_documentation/: 00interfaces-2021.md  00interfaces-2022.md  00interfaces.md  00overview.md  00recommendations.md  01interfaces.md  01perception-2021.md  01perception-2022.md  01perception.md  02controller-2022.md  02controller.md  03cars-2022.md  03cars.md  04tracks.md  05evaluation.md  06rosmsgs-2021.md  06rosmsgs.md
_home/: 00home-2021.md  00home-2022.md  00home.md  01dates-2022.md  01dates.md  02dates.md  02updates-2022.md  02updates.md  03bib-2022.md  03bib.md  home.md
_includes/: _footer.html  _head.html  _masthead.html  _navigation.html  footer.html  head.html  header.html
_installation/: 00aws-2022.md  00head.md  00recommendations-2021.md  00recommendations.md  01aws-2022.md  01installation-2021.md  01installation.md  01local.md  02GRAIC.md  02local.md  03run-graic.md  04create-your-own-controller.md
_layouts/: page-fullwidth.html  page.html
_leaderboard/: 00interfaces.md
_outreach/: 00_CPS2021.md  EOH2021.md
_overview/: 00overview.md  01tracks.md  02dates.md
_sass/: _01_settings_colors.scss  _02_settings_typography.scss
_site/: 404.html  atom.xml  feed.xml  humans.txt  index.html  robots.txt  sitemap.xml
_submissions/: links-2021.md  links-2022.md  links.md
about/: index.html
archive/: about-2021.html  (+5 more)
graic_perception/: CMakeLists.txt  package.xml  setup.py
graic_perception/graic_raceinfo_publisher/: CMakeLists.txt
graic_perception/graic_raceinfo_publisher/launch/: graic_raceinfo_publisher.launch
graic_perception/graic_raceinfo_publisher/src/graic_raceinfo_publisher/: graic_raceinfo_publisher.py
graic_perception/launch/: graic_perception.launch
graic_perception/location_publisher/: package.xml
graic_perception/location_publisher/launch/: location_publisher.launch
graic_perception/src/: graic_perception.py
src/gazebo_model_collision_plugin/: CMakeLists.txt  README.md  package.xml
src/gazebo_model_collision_plugin/include/: gazebo_model_collision_plugin.hpp
src/gazebo_model_collision_plugin/msgs/: Contact.msg
src/gazebo_model_collision_plugin/src/: gazebo_model_collision_plugin.cpp
src/gem_simulator/gem_description/: CMakeLists.txt  package.xml
src/gem_simulator/gem_description/config_rviz/: gem.rviz  gem_velodyne.rviz  gem_velodyne_stereo.rviz
src/gem_simulator/gem_description/launch/: gem_vehicle.launch
src/gem_simulator/gem_description/meshes/: base_link.STL  chair_link.STL  door_link.STL  front_camera_link.STL  front_left_emergency_button_link.STL  front_left_head_light_link.STL  front_left_turn_light_link.STL  front_left_wheel_link.STL  front_rack_link.STL  front_right_emergency_button_link.STL  front_right_turn_light_link.STL  front_right_wheel_link.STL  left_I_link.STL  left_antenna_link.STL  left_fixed_hinge_link.STL  left_steering_hinge_link.STL  rear_left_emergency_button_link.STL  rear_left_light_link.STL  rear_left_wheel_link.STL  rear_light_bar_link.STL  rear_rack_link.STL  rear_right_emergency_button_link.STL  rear_right_light_link.STL  rear_right_stop_light_link.STL  rear_right_wheel_link.STL  right_antenna_link.STL  right_blue_outer_link.STL  right_fixed_hinge_link.STL  right_steering_hinge_link.STL  top_rack_link.STL
src/gem_simulator/gem_description/urdf/: gem.gazebo  gem.urdf.xacro  macros.xacro  materials.xacro
src/gem_simulator/gem_gazebo/: CMakeLists.txt  package.xml
src/gem_simulator/gem_gazebo/config/: gem_ackermann_control_params.yaml  gem_joint_control_params.yaml
src/gem_simulator/gem_gazebo/launch/: gem_vehicle.launch
src/gem_simulator/gem_gazebo/media/materials/scripts/: ds_sim.material
src/gem_simulator/gem_gazebo/models/ds_cube/: model.config  model.sdf
src/gem_simulator/gem_gazebo/models/ds_cube/meshes/: ds_cube.dae
src/gem_simulator/gem_gazebo/models/ds_curved_road_100m/: model.config  model.sdf
src/gem_simulator/gem_gazebo/models/ds_curved_road_100m/meshes/: curved_road_100m.dae
src/gem_simulator/gem_gazebo/models/ds_curved_road_50m/: model.config  model.sdf
src/gem_simulator/gem_gazebo/models/ds_curved_road_50m/meshes/: curved_road_50m.dae
src/gem_simulator/gem_gazebo/models/ds_intersection/: model.config  model.sdf
src/gem_simulator/gem_gazebo/models/ds_intersection/meshes/: intersection.dae
src/gem_simulator/gem_gazebo/models/ds_straight_road_100m/: model.config  model.sdf
src/gem_simulator/gem_gazebo/models/ds_straight_road_100m/meshes/: straight_road_100m.dae
src/gem_simulator/gem_gazebo/models/ds_straight_road_200m/: model.config  model.sdf
src/gem_simulator/gem_gazebo/models/ds_straight_road_200m/meshes/: straight_road_200m.dae
src/gem_simulator/gem_gazebo/models/ds_straight_road_50m/: model.config  model.sdf
src/gem_simulator/gem_gazebo/models/ds_straight_road_50m/meshes/: straight_road_50m.dae
src/gem_simulator/gem_gazebo/scripts/: gem_control.py  gem_sensor_info.py
src/gem_simulator/gem_gazebo/worlds/: example.world  mcity_clean.world  mp5.world  mp5_test.world  popgri.world  race_track.world  smaller_track.world  test.world
src/perception_module/popgri_raceinfo_publisher/: CMakeLists.txt  package.xml  setup.py
src/perception_module/popgri_raceinfo_publisher/launch/: popgri_raceinfo_publisher.launch
src/perception_module/popgri_raceinfo_publisher/src/popgri_raceinfo_publisher/: popgri_raceinfo_publisher.py
src/race_util_module/model_based_node/: package.xml  setup.py
src/race_util_module/model_based_node/launch/: model_based_node.launch
src/race_util_module/model_based_node/src/: model_based_node.py  model_based_node_complex.py
(+400 files in other folders)
