<?xml version="1.0"?>
<package format="2">
  <name>gem_description</name>
  <version>1.0.0</version>
  <description>The gem_description is the description of gem vehicle</description>
  <author email="hangcui1201@gmail.com">Hang Cui</author>
  <maintainer email="hangcui1201@gmail.com"> Hang Cui </maintainer>
  <url type="repository">https://github.com/hangcui1201/gem_simulator.git</url>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>rviz</depend>
  <depend>gazebo_ros</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo_ros_control</depend>
  <depend>hardware_interface</depend>
  <depend>transmission_interface</depend>
  <export>
    <architecture_independent />
  </export>
</package>
